--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nyansa-interview-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
